--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -16,7 +16,7 @@ html, body {
 }
 
 body {
-    padding: 100px 0px 50px 0px;
+    padding: 10px 0px;
 }
 
 h1 {
@@ -28,6 +28,81 @@ h1 {
     margin: 0 auto;
 }
 
+.header {
+    height: 80px;
+    background-color: rgba($color-grey-light-1, .38);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    position: relative;
+
+    .input-search {
+        position: relative;
+    }
+
+    .map__input {
+        width: 370px;
+        height: 50px;
+        border: none;
+        border-radius: 100px;
+        padding: 10px 30px;
+        font-size: 17px;
+        font-weight: 300;
+        letter-spacing: 1px;
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    .btn-search {
+        width: 115px;
+        height: 50px;
+        position: absolute;
+        border: none;
+        border-radius: 100px;
+        right: 0px;
+        top: 0px;
+        background-color: rgba(skyblue, .5);
+        font-size: 14px;
+        color: #fff;
+        font-weight: 700;
+        border: none;
+        cursor: pointer;
+        transition: transform .3s;
+
+        &:hover {
+            transform: scale(1.05);
+        }
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    .bookmark-count {
+        border-radius: 50%;
+        display: block;
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        color: #fff;
+        padding-top: 2px;
+        padding-left: 2px;
+        position: absolute;
+        top: 37px;
+        right: 12px;
+        background-color: rgba(#fff, .9);
+        color: rgba(#F59A83, .8);
+        font-weight: 700;
+        font-size: 18px;
+    }
+}
+
 .section-map {
     // width: 1140px;
     margin: 0 auto;
@@ -35,20 +110,101 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    &__input {
-        width: 300px;
-        margin-bottom: 20px;
-
-        &:focus {
-            outline: none;
-        }
-    }
+    position: relative;
 
     #map {
         height: 500px;
         width: 100%;
         margin: 0 auto;
+    }
+
+    &__bookmark {
+        display: flex;
+        flex-direction: column;
+        padding: 10px 10px;
+        width: 420px;
+        height: 500px;
+        background-color: rgba(#fff, .7);
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        margin: 0;
+        overflow: scroll;
+    }
+
+    &__book-clip {
+        margin: 0;
+        margin-bottom: 10px;
+        list-style: none;
+        display: flex;
+        flex-shrink: 0;
+        align-items: center;
+        transition: all .2s;
+
+        &:hover :last-child {
+            transform: translateX(0px);
+            opacity: 1;
+        }
+
+        &:hover {
+            transform: scale(1.01);
+            box-shadow: 2px 2px 10px 0 rgba(46, 61, 73, 0.1);
+        }
+
+        .book-clip-info {
+            display: flex;
+            flex-direction: column;
+            padding-left: 10px;
+
+            .btn-move {
+                color: rgba(#F59A83, 1);
+                text-align: left;
+                margin-top: 5px;
+                font-size: 13px;
+                cursor: pointer;
+
+                & span {
+                    margin-left: 3px;
+                    transition: margin-left .3s;
+                    color: rgba(#F59A83, 1)
+                }
+            
+                &:hover {
+                    
+                    span {
+                        margin-left: 8px;
+                    }
+                }
+            }
+        }
+    }
+
+    &__book-clip-img {
+        width: 110px;
+        height: 100px;
+        border-radius: 3px;
+    }
+
+    &__book-clip-date {
+        text-align: left;
+        margin-top: 5px;
+        font-size: 13px;
+        letter-spacing: 1px;
+    }
+
+    &__event-name {
+        width: 230px;
+        height: 40px;
+        line-height: 20px;
+        display: inline-block;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 15px;
+        color: $color-black;
+        text-align: left;
+        letter-spacing: 1px;
     }
 }
 
@@ -91,13 +247,13 @@ h1 {
         align-items: center;
         margin-right: 10px;
         text-align: center;
-        padding-top: 10px;
+        padding-top: 5px;
         width: 90px;
     }
 
     &__host-img {
-        width: 65px;
-        height: 65px;
+        width: 55px;
+        height: 55px;
         border-radius: 100px;
         margin-bottom: 10px;
         box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
@@ -105,7 +261,7 @@ h1 {
     }
 
     &__host-name {
-        font-size: 15px;
+        font-size: 13px;
         margin-bottom: 5px;
         display: inline;
     }
@@ -164,21 +320,80 @@ h1 {
     }
 }
 
-.icon-heart {
-    width: 30px;
-    height: 30px;
+.icon-heart,
+.icon-like {
     fill: transparent;
     stroke: #F59A83;
     stroke-width: 2px;
-    position: absolute;
-    top: 7px;
-    right: 7px;
-    transition: fill .3s;
+
     cursor: pointer;
 
     &:hover {
-
+        &:hover {
+            animation: bounce .6s infinite;
+        }
     }
+}
+
+.icon-heart {
+    position: absolute;
+    top: 7px;
+    right: 10px;
+    transition: fill .3s;
+    width: 30px;
+    height: 30px;
+}
+
+.selected {
+    fill: #F59A83;
+}
+
+.icon-like {
+    width: 45px;
+    height: 45px;
+    fill: #F59A83;
+    align-self: flex-end;
+    position: absolute;
+    right: 17px;
+    top: 20px;
+}
+
+.icon-bin {
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+    transform: translateX(20px);
+    opacity: 0;
+    transition: all .3s;
+    fill: $color-grey-light-2;
+    fill: $color-black;
+}
+
+.comment-wrapper {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: fill .2s;
+
+    span {
+        transform: translateY(-3px);
+        color: rgba($color-grey-light-2, .8);
+    }
+
+    &:hover > * {
+        fill: $color-black;
+        color: $color-black;
+    }
+}
+
+.icon-comment {
+    width: 30px;
+    height: 30px;
+    fill: rgba($color-grey-light-2, .6);
+    transition: fill .2s;
 }
 
 footer {
@@ -188,4 +403,22 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1)
+    }
+
+    50% {
+        transform: scale(1.05)
+    }
+
+    100% {
+        transform: scale(1)
+    }
+}
+
+.inactive {
+    display: none !important;
 }
