--- a/index.ejs
+++ b/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Meetup</title>
+    <title>Vanilla Meetup</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700" rel="stylesheet">
 </head>
 <body>
@@ -26,11 +26,16 @@
             <ul class="section-map__bookmark bookmark-inactive"></ul>
         </div>
 
+        <div class="section-topic">
+            <ul class="section-topic__wrapper"></ul>
+        </div>
+
         <section class="content">
-            <div class="section-city">
-                <h1 class="city-name">Seoul</h1>
-                <div class="city-member">300 members in Seoul</div>
-                <div class="local-time">Local Time</div>
+            <div class="section-city inactive">
+                <h1 class="section-city__city-name"></h1>
+                <img class="section-city__img" src="" alt="selected city photo">
+                <div class="section-city__city-member"></div>
+                <div class="section-city__local-time"></div>
             </div>
 
             <div class="section-list">
