--- a/index.ejs
+++ b/index.ejs
@@ -9,6 +9,10 @@
 <body>
     <div class="row">
         <header class="header">
+            <div class="company-name">
+                <span class="name-label-1">Vanilla</span>
+                <span class="name-label-2">Meetup</span>
+            </div> 
             <div class="input-search">
                 <input type="text" class="map__input">
                 <button class="btn-search">SEARCH</button>
