--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -254,6 +254,7 @@ h1 {
         border-radius: 7px;
     }
 
+    &__city-country,
     &__city-member,
     &__local-time {
         font-size: 17px;
@@ -281,6 +282,7 @@ h1 {
         padding-left: 20px;
         position: absolute;
         user-select: none;
+        cursor: grab;
 
         &--topic {
             list-style: none;
